; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-lldp-rx.c_lldp_handler.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-lldp-rx.c_lldp_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SD_LLDP_EVENT_ADDED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [94 x i8] c"Received LLDP datagram from previously unknown neighbor, restarting 'fast' LLDP transmission.\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"Failed to restart LLDP transmission: %m\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i32*, i8*)* @lldp_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lldp_handler(i32* %0, i64 %1, i32* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  store i8* %3, i8** %8, align 8
  %11 = load i8*, i8** %8, align 8
  %12 = bitcast i8* %11 to i32*
  store i32* %12, i32** %9, align 8
  %13 = load i32*, i32** %9, align 8
  %14 = call i32 @assert(i32* %13)
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @link_lldp_save(i32* %15)
  %17 = load i32*, i32** %9, align 8
  %18 = call i64 @link_lldp_emit_enabled(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %36

20:                                               ; preds = %4
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @SD_LLDP_EVENT_ADDED, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %36

24:                                               ; preds = %20
  %25 = load i32*, i32** %9, align 8
  %26 = call i32 @log_link_debug(i32* %25, i8* getelementptr inbounds ([94 x i8], [94 x i8]* @.str, i64 0, i64 0))
  %27 = load i32*, i32** %9, align 8
  %28 = call i32 @link_lldp_emit_start(i32* %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32, i32* %10, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %24
  %32 = load i32*, i32** %9, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @log_link_warning_errno(i32* %32, i32 %33, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  br label %35

35:                                               ; preds = %31, %24
  br label %36

36:                                               ; preds = %35, %20, %4
  ret void
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @link_lldp_save(i32*) #1

declare dso_local i64 @link_lldp_emit_enabled(i32*) #1

declare dso_local i32 @log_link_debug(i32*, i8*) #1

declare dso_local i32 @link_lldp_emit_start(i32*) #1

declare dso_local i32 @log_link_warning_errno(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
